tcp/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-bu: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: kafka-1
  namespace: superauth
spec:
  entryPoints:
    - "9001"
  routes:
    - match: HostSNI(`*`)
      services:
        - name: kafka-1
          namespace: hyperauth
          port: 9093
          scheme: https
          serversTransport: insecure@file
  tls: {}
---
