tcp/ingressRouteTCP.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kafka-1
  namespace: superauth
spec:
